[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Tiles/sensor.png" type="Texture" id=1]
[ext_resource path="res://Inputs/Sensor.gd" type="Script" id=2]
[ext_resource path="res://Audio/SwitchSound.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "False"
length = 0.222222
step = 0.0555556
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0555556, 0.111111, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "True"
length = 0.222222
step = 0.0555556
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0555556, 0.111111, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4 ]
}

[node name="Sensor" type="Area2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/False = SubResource( 2 )
anims/True = SubResource( 3 )

[node name="SwitchSound" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="." to="." method="_on_Sensor_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Sensor_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sensor_body_exited"]
